--- a/Mobile.html
+++ b/Mobile.html
@@ -1,20 +1,11 @@
-</head><body>
+<html>
   <title>Risalah</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-<body>
-  <iframe src="https://blogrisalah.wixsite.com/website" style="position:fixed; top:-50px; left:0px; bottom:0px; right:0px; width:100%; height:105%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-</iframe>  
-   
-  </body>
-    <script type="text/javascript">
-<!--
-if (screen.width <= 900) {
-document.location = "/Mobile.html";
-}
-//-->
-</script>
+  <body>
   
-
-
-</body></html>
+     <iframe src="https://blogrisalah.wixsite.com/website" style="    position: fixed;    left: 0px;    top: -51px;    width: 100%;    height: 108%;}">
+</iframe>  
+    
+  </body>
+</html>
