--- a/Mobile.html
+++ b/Mobile.html
@@ -4,7 +4,7 @@
 
   <body>
   
-     <iframe src="https://blogrisalah.wixsite.com/website" style="position: fixed; right: 0px; left: 0px;top: -42px; width: 100%; height: 108%;">
+     <iframe src="https://blogrisalah.wixsite.com/website" style="relative: fixed; right: 0px; left: 0px;top: -42px; width: 100%; height: 108%;">
 </iframe>  
     
   </body>
