--- a/Mobile.html
+++ b/Mobile.html
@@ -1,10 +1,10 @@
 <html>
   <title>Risalah</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=2">
 
   <body>
   
-     <iframe src="https://blogrisalah.wixsite.com/website" style="relative: fixed; right: 0px; left: 0px;top: -42px; width: 200%; height: 108%;">
+     <iframe src="https://blogrisalah.wixsite.com/website" style="position:fixed; right: 0px; left: 0px;top: -42px; width: 100%; height: 108%;">
 </iframe>  
     
   </body>
