--- a/Mobile.html
+++ b/Mobile.html
@@ -1,10 +1,10 @@
 <html>
-  <title>Risalah</title>
+  <title>My Wix Site</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <body>
   
-     <iframe src="https://blogrisalah.wixsite.com/website" style=" position:fixed; right: 0px; left: 0px;top: -42px; width: 100%; height: 108%;">
+     <iframe src="https://risalah.github.io/index.html" style="    position: fixed;    left: 0px;    top: -42px;    width: 100%;    height: 108%;}">
 </iframe>  
     
   </body>
