--- a/Mobile.html
+++ b/Mobile.html
@@ -1,10 +1,10 @@
 <html>
-  <title>My Wix Site</title>
+  <title>Risalah</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <body>
   
-     <iframe src="https://username.wixsite.com/name" style="    
+     <iframe src="https://blogrisalah.wixsite.com/website" style="    
      position: fixed;    left: 0px;    top: -51px;    width: 100%;    height: 108%;">
 </iframe>  
     
