--- a/Mobile.html
+++ b/Mobile.html
@@ -1,12 +1,9 @@
 <html>
-  <title>Risalah</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <body>
-  
-     <iframe src="https://blogrisalah.wixsite.com/website" style="    
-     position: fixed;    left: 0px;    top: -42px;    width: 100%;    height: 108%;">
-</iframe>  
-    
-  </body>
+<title>Risalah</title>
+<head>
+<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+</head>
+<body style="margin:0px;padding:0px;overflow:hidden">
+  <iframe src="https://blogrisalah.wixsite.com/website" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
+</body>
 </html>
