--- a/Mobile.html
+++ b/Mobile.html
@@ -1,9 +1,22 @@
 <html>
-<title>Risalah</title>
-<head>
-<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-</head>
-<body style="margin:0px;padding:0px;overflow:hidden">
-  <iframe src="https://blogrisalah.wixsite.com/website" frameborder="0" style="overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;position:absolute;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
-</body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta charset="utf-8">
+    <title>Risalah</title>
+    <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
+
+    <style>
+      html, body{
+        margin: 0;
+        height: 100%;
+      }
+      iframe{
+        border: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <iframe title="VR" src="https://blogrisalah.wixsite.com/website" width="100%" height="100%" allowfullscreen="yes" allowvr="yes" scrolling="no">
+    </iframe>
+  </body>
 </html>
