--- a/Mobile.html
+++ b/Mobile.html
@@ -1,22 +1,11 @@
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta charset="utf-8">
-    <title>Risalah</title>
-    <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
+  <title>Risalah</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <style>
-      html, body{
-        margin: 0;
-        height: 100%;
-      }
-      iframe{
-        border: 0;
-      }
-    </style>
-  </head>
   <body>
-    <iframe title="VR" src="https://blogrisalah.wixsite.com/website" width="100%" height="100%" allowfullscreen="yes" allowvr="yes" scrolling="no">
-    </iframe>
+  <iframe src="https://blogrisalah.wixsite.com/website" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+</iframe>
+  
+    
   </body>
 </html>
