--- a/Mobile.html
+++ b/Mobile.html
@@ -1,11 +1,11 @@
 <html>
-  <title>Risalah</title>
+  <title>My Wix Site</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <body>
-  <iframe src="https://blogrisalah.wixsite.com/website" style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-</iframe>
   
+     <iframe src="https://blogrisalah.wixsite.com/website" style="    position: fixed;    left: 0px;    top: -42px;    width: 100%;    height: 108%;}">
+</iframe>  
     
   </body>
 </html>
