--- a/Mobile.html
+++ b/Mobile.html
@@ -4,7 +4,7 @@
 
   <body>
   
-     <iframe src="https://blogrisalah.wixsite.com/website" style=" left: 0px;    top: -42px;  frameborder="0" width="100%" height="100%" seamless}">
+     <iframe src="https://blogrisalah.wixsite.com/website" style="    position: fixed;    left: 0px;    top: -41px;    width: 100%;    height: 108%;}">
 </iframe>  
     
   </body>
