--- a/Mobile.html
+++ b/Mobile.html
@@ -3,9 +3,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <body>
-  
-     <iframe src="https://blogrisalah.wixsite.com/website" style="    position: fixed;    left: 0px;    top: -41px;    width: 100%;    height: 108%;}">
-</iframe>  
-    
+  <div class="iframe-container">
+   <iframe src="https://blogrisalah.wixsite.com/website" style="    position: fixed;    left: 0px;    top: -41px;    width: 100%;    height: 108%;}">
+</iframe>
+</div>
   </body>
 </html>
