--- a/Mobile.html
+++ b/Mobile.html
@@ -2,8 +2,9 @@
   <title>My Wix Site</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <div class="iframe-container">
-   <iframe src="https://blogrisalah.wixsite.com/website" style="    position: fixed;    left: 0px;    top: -41px;    width: 100%;    height: 108%;}">
-</iframe>
-</div>
+  <fieldset>
+    <legend>Random Patch:</legend>
+    <iframe src="https://blogrisalah.wixsite.com/website" frameborder="0"></iframe>
+</fieldset>
+ 
 </html>
