--- a/Mobile.html
+++ b/Mobile.html
@@ -2,8 +2,5 @@
   <title>My Wix Site</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <fieldset>
-    <iframe src="https://blogrisalah.wixsite.com/website" frameborder="0"></iframe>
-</fieldset>
- 
+  <style type="text/css"> #left { display: none; float: left; width: 212px; } #right { display: block; float: right; width: 100%; }</style> <div align="left"> <iframe height="1000" src="https://blogrisalah.wixsite.com/website" width="1200"></iframe></div>
 </html>
