--- a/Mobile.html
+++ b/Mobile.html
@@ -1,6 +1,11 @@
 <html>
-  <title>My Wix Site</title>
+  <title>Risalah</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <style type="text/css"> #left { display: none; float: left; width: 212px; } #right { display: block; float: right; width: 100%; }</style> <div align="left"> <iframe height="1000" src="https://blogrisalah.wixsite.com/website" width="1200"></iframe></div>
+  <body>
+  
+     <iframe src="https://blogrisalah.wixsite.com/website" style="    position: fixed;    left: 0px;    top: -42px;    width: 200%;    height: 108%;}">
+</iframe>  
+    
+  </body>
 </html>
