--- a/Mobile.html
+++ b/Mobile.html
@@ -1,7 +1,10 @@
 <html>
   <title>Risalah</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=100%, initial-scale=1">
   
-     <iframe src="https://blogrisalah.wixsite.com/website" style="    position: fixed;   margin: 0; padding: 0; left: 0px;    top: -42px;    width: 100%;    height: 108%;}">
-</iframe>  
+  body {
+    margin: 0;
+<iframe src="https://blogrisalah.wixsite.com/website" style="    position: fixed; left: 0px;    top: -42px;    width: 100%;    height: 108%;">
+</iframe> }
+      
     </html>
