--- a/Mobile.html
+++ b/Mobile.html
@@ -2,9 +2,9 @@
   <title>Risalah</title>
   <meta name="viewport" content="width=100%, initial-scale=1">
   
-  body {
+  
     margin: 0;
 <iframe src="https://blogrisalah.wixsite.com/website" style="    position: fixed; left: 0px;    top: -42px;    width: 100%;    height: 108%;">
-</iframe> }
+</iframe>
       
     </html>
